--- a/CancherksWebApp/Pages/Admin/ModificarInstalacion.cshtml
+++ b/CancherksWebApp/Pages/Admin/ModificarInstalacion.cshtml
@@ -144,16 +144,18 @@
 
                                     <label class="form-check-label label-bold">Hora Inicio</label>
                                     <div class="form-check form-check-inline">
-                                        <input type="time" value="@daySchedule?.StartTime.ToString("hh\\:mm")" id="startTime-@day.NameDay" class="custom-time-picker">
+                                        <input type="time" name="ScheduleAvailability.StartTime" value="@daySchedule?.StartTime.ToString("hh\\:mm")" id="startTime-@day.NameDay" class="custom-time-picker">
+
                                     </div>
 
                                     <label class="form-check-label label-bold">Hora Final</label>
                                     <div class="form-check form-check-inline">
-                                        <input type="time" value="@daySchedule?.EndTime.ToString("hh\\:mm")" id="endTime-@day.NameDay" class="custom-time-picker">
+                                        <input type="time" name="ScheduleAvailability.EndTime" value="@daySchedule?.EndTime.ToString("hh\\:mm")" id="endTime-@day.NameDay" class="custom-time-picker">
+
                                     </div>
 
                                     <div class="d-flex justify-content-center mt-2">
-                                        <button type="submit" asp-page-handler="AddSchedule" id="schedule" class="btn btn-primary button-gradient">Agregar</button>
+                                        <button type="submit" asp-page-handler="ModifySchedule" id="schedule" class="btn btn-primary button-gradient">Agregar</button>
                                     </div>
                                 </form>
                             </div>
