report generation complete

--- a/CancherksWebApp/Pages/Admin/ModificarInstalacion.cshtml
+++ b/CancherksWebApp/Pages/Admin/ModificarInstalacion.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model  CancherksWebApp.Areas.Admin.Pages.ModificarInstalacionModel
+@model  ModificarInstalacionModel
 @{
     var userRole = @Model.role;
     Layout = userRole == "2569" ? "_AdminLayout" : "_ErrorLayout";
