--- a/CancherksWebApp/Pages/Admin/AgregarInstalacion.cshtml
+++ b/CancherksWebApp/Pages/Admin/AgregarInstalacion.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model AgregarInstalacionModel
+@model CancherksWebApp.Pages.Admin.AgregarInstalacionModel
 @{
     var userRole = @Model.role;
     Layout = userRole == "2569" ? "_AdminLayout" : "_ErrorLayout";
