--- a/CancherksWebApp/Pages/Admin/GestionSolicitudes.cshtml
+++ b/CancherksWebApp/Pages/Admin/GestionSolicitudes.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model  GestionSolcitudesModel
+@model CancherksWebApp.Pages.Admin.GestionSolcitudesModel
 @{
     var userRole = @Model.role;
     Layout = userRole == "2569" ? "_AdminLayout" : "_ErrorLayout";
