--- a/CancherksWebApp/Pages/Admin/ModificarInstalacion.cshtml
+++ b/CancherksWebApp/Pages/Admin/ModificarInstalacion.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model  ModificarInstalacionModel
+@model CancherksWebApp.Pages.Admin.ModificarInstalacionModel
 @{
     var userRole = @Model.role;
     Layout = userRole == "2569" ? "_AdminLayout" : "_ErrorLayout";
