--- a/CancherksWebApp/Pages/Admin/Reportes.cshtml
+++ b/CancherksWebApp/Pages/Admin/Reportes.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model  ReportesModel
+@model CancherksWebApp.Pages.Admin.ReportesModel
 @{
     var userRole = @Model.role;
     Layout = userRole == "2569" ? "_AdminLayout" : "_ErrorLayout";
