--- a/CancherksWebApp/Pages/Shared/_AdminLayout.cshtml
+++ b/CancherksWebApp/Pages/Shared/_AdminLayout.cshtml
@@ -58,16 +58,16 @@
 
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link @(requestArea ? "activeNav" : "")" asp-area="Admin" asp-page="/GestionSolicitudes">Solicitudes</a>
+                            <a class="nav-link @(requestArea ? "activeNav" : "")" asp-area="Admin" asp-page="GestionSolicitudes">Solicitudes</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link @(reportArea ? "activeNav" : "")" asp-area="Admin" asp-page="/Reportes">Reportes</a>
+                            <a class="nav-link @(reportArea ? "activeNav" : "")" asp-area="Admin" asp-page="Reportes">Reportes</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link @(adminArea ? "activeNav" : "")" asp-area="Admin" asp-page="/AgregarInstalacion">Administración</a>
+                            <a class="nav-link @(adminArea ? "activeNav" : "")" asp-area="Admin" asp-page="AgregarInstalacion">Administración</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link @(modoSolicitante ? "activeNav" : "")" asp-area="Solicitante" asp-page="/Reservacion">Modo Solicitante</a>
+                            <a class="nav-link @(modoSolicitante ? "activeNav" : "")" asp-area="" asp-page="../Solicitante/Reservacion">Modo Solicitante</a>
                         </li>
                     </ul>
                 </div>
