--- a/CancherksWebApp/Pages/Admin/BuscarInstalacion.cshtml
+++ b/CancherksWebApp/Pages/Admin/BuscarInstalacion.cshtml
@@ -8,7 +8,7 @@
 }
 @section Scripts
     {
-    <script src="@Url.Content("~/js/Admin/Reports.js")"></script>
+    <script src="@Url.Content("~/js/Admin/BuscarInstalacion.js")"></script>
 }
 
 <section class="container px-5 py-3">
