--- a/CancherksWebApp/Pages/Solicitante/Reservacion.cshtml
+++ b/CancherksWebApp/Pages/Solicitante/Reservacion.cshtml
@@ -10,14 +10,15 @@
 
 @section Scripts
 {
+
     <script src="@Url.Content("~/js/Requester/Reservation.js")"></script>
 }
 <section class="container-fluid px-5 py-3">
 
-    <h3 style="margin-bottom: 2rem;">Solicitudes </h3>
+    <h3 style="margin-bottom: 2rem;">Realizar Reservación </h3>
     <dropdown class="dropdown">
         <button class="btn btn-secondary dropdown-toggle custom-dropdown-button" type="button" id="dropdownInstallations" data-bs-toggle="dropdown" aria-expanded="false">
-            Selecione un Deporte
+            Deporte
         </button>
         <ul class="dropdown-menu custom-dropdown-options" aria-labelledby="dropdownInstallations">
 
@@ -32,24 +33,24 @@
 
     <div id="gridDiv" class="py-5 d-flex flex-wrap gap-3">
     @{
-            // <div class="col-6" style="max-width: 640px;">
-            //     <div class="card mb-3">
-            //         <div class="row g-0">
-            //             <div class="col-md-4">
-            //                 <img src="~/img/sintetica.jpg" class="img-fluid rounded-start" alt="...">
-            //             </div>
-            //             <div class="col-md-8">
-            //                 <div class="card-body">
-            //                     <h5 class="card-title font-weight-bold ">Sintetica</h5>
-            //                     <p class="card-text mb-0">Cancha sintética para partivdos 6vs6 de fútbol</p>
-            //                     <p class="card-text mb-1 text-primary"><i class="bi bi-geo-fill"></i> Lado sur</p>
-            //                     <button type="button" class="btn btn-outline-primary">Consultar</button>
+            <div class="col-6" style="max-width: 640px;">
+                <div class="card mb-3">
+                    <div class="row g-0">
+                        <div class="col-md-4">
+                            <img src="~/img/sintetica.jpg" class="img-fluid rounded-start" alt="...">
+                        </div>
+                        <div class="col-md-8">
+                            <div class="card-body">
+                                <h5 class="card-title font-weight-bold ">Sintetica</h5>
+                                <p style="white-space: pre-line"  class="card-text mb-0">Cancha sintética para partivdos 6vs6 de fútbol y soy muy guapo \n en una nueva linea </p>
+                                <p class="card-text mb-1 text-primary"><i class="bi bi-geo-fill"></i> Lado sur</p>
+                                <button type="button" class="btn btn-outline-primary">Consultar</button>
 
-            //                 </div>
-            //             </div>
-            //         </div>
-            //     </div>
-            // </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
     }
 
        
