--- a/CancherksWebApp/Pages/Shared/_RequesterLayout.cshtml
+++ b/CancherksWebApp/Pages/Shared/_RequesterLayout.cshtml
@@ -70,8 +70,13 @@
                         }
                     </ul>
                 </div>
-                <div class="icon-Profile bg-footer text-center align-middle fs-3 text-white">
-                    <i class="bi bi-person"></i>
+                <div class="icon-HighContrast text-center align-middle text-black mx-1">
+                    <i class="bi bi-eye-fill" alt="Ícono alto contraste" style="font-size: 20px;"></i>
+                    <i class="bi bi-zoom-in" alt="Ícono acerca" style="font-size: 20px;"></i>
+                    <i class="bi bi-zoom-out" alt="Ícono alejar" style="font-size: 20px;"></i>
+                </div>
+                <div class="icon-Profile bg-footer text-center align-middle fs-3 text-white" style="margin-left: 20px;">
+                    <i class="bi bi-person" alt="Ícono ver perfil"></i>
                 </div>
 
 
