Zoom in and zoom out ready
Zoom in and zoom out ready

--- a/CancherksWebApp/Pages/Shared/_RequesterLayout.cshtml
+++ b/CancherksWebApp/Pages/Shared/_RequesterLayout.cshtml
@@ -72,7 +72,7 @@
                 </div>
                 <div class="icon-HighContrast text-center align-middle text-black mx-1">
                     <i class="bi bi-eye-fill" alt="Ícono alto contraste" style="font-size: 20px;"></i>
-                    <i class="bi bi-zoom-in" alt="Ícono acerca" style="font-size: 20px;"></i>
+                    <i id="zoom-icon" class="bi bi-zoom-in" alt="Ícono acercar" style="font-size: 20px; cursor: pointer;"></i>
                     <i class="bi bi-zoom-out" alt="Ícono alejar" style="font-size: 20px;"></i>
                 </div>
                 <div class="icon-Profile bg-footer text-center align-middle fs-3 text-white" style="margin-left: 20px;">
