error page changes
Changed language to spanish

--- a/CancherksWebApp/Pages/Shared/_ErrorLayout.cshtml
+++ b/CancherksWebApp/Pages/Shared/_ErrorLayout.cshtml
@@ -39,13 +39,13 @@
 
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link @(option1IsActive ? "activeNav" : "")" asp-area="" asp-page="/">Empty</a>
+                            <a class="nav-link @(option1IsActive ? "activeNav" : "")" asp-area="" asp-page="/">Vacío</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link @(option2IsActive ? "activeNav" : "")" asp-area="" asp-page="/">Empty</a>
+                            <a class="nav-link @(option2IsActive ? "activeNav" : "")" asp-area="" asp-page="/">Vacío</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link @(option3IsActive ? "activeNav" : "")" asp-area="" asp-page="/">Empty</a>
+                            <a class="nav-link @(option3IsActive ? "activeNav" : "")" asp-area="" asp-page="/">Vacío</a>
                         </li>
                     </ul>
                 </div>
@@ -65,11 +65,11 @@
             <ul class="d-flex flex-column gap-3 px-0 py-2">
                 <li class="py-2 inline-nav-item ">
                     <i class="bi bi-people-fill"></i>
-                    empty
+                    Vacío
                 </li>
                 <li class="py-2 inline-nav-item ">
                     <i class="bi bi-people-fill"></i>
-                    empty
+                    Vacío
                 </li>
             </ul>
 
