--- a/CancherksWebApp/Pages/Shared/_RequesterLayout.cshtml
+++ b/CancherksWebApp/Pages/Shared/_RequesterLayout.cshtml
@@ -71,20 +71,18 @@
                     </ul>
                 </div>
                 <div class="icon-HighContrast text-center align-middle text-black mx-1">
-                    <i class="bi bi-eye-fill" alt="Ícono alto contraste" style="font-size: 20px;"></i>
-                    <i id="zoom-icon" class="bi bi-zoom-in" alt="Ícono acercar" style="font-size: 20px; cursor: pointer;"></i>
-                    <i class="bi bi-zoom-out" alt="Ícono alejar" style="font-size: 20px;"></i>
+                    <i class="bi bi-eye-fill" alt="Ícono alto contraste" style="font-size: 24px;"></i>
+                    <i id="zoom-icon" class="bi bi-zoom-in" alt="Ícono acercar" style="font-size: 24px; cursor: pointer;"></i>
+                    <i id="zoomOut-icon" class="bi bi-zoom-out" alt="Ícono alejar" style="font-size: 24px;"></i>
                 </div>
-                <div class="icon-Profile bg-footer text-center align-middle fs-3 text-white" style="margin-left: 20px;">
+                <div class="icon-Profile bg-footer text-center align-middle fs-3 text-white" style="margin-left: 24px;">
                     <i class="bi bi-person" alt="Ícono ver perfil"></i>
                 </div>
-
 
 
             </div>
         </nav>
     </header>
-
 
     <div class="page d-flex flex-row bg-grayContrast">
         <aside class="site-bar bg-white">
