--- a/CancherksWebApp/Pages/ErrorPage.cshtml
+++ b/CancherksWebApp/Pages/ErrorPage.cshtml
@@ -6,13 +6,7 @@
 
 }
 <div style="text-align:center; margin-top:50px;">
-    <h1 style="color:red;">Oops! Something went wrong.</h1>
-    <p style="font-size:20px;">We are sorry for the inconvenience. Please try again later.</p>
-    @if (Model.ShowRequestId)
-    {
-        <p>
-            <strong>Request ID:</strong> <code>@Model.RequestId</code>
-        </p>
-    }
-    <a href="/">Return to Home</a>
+    <h1 style="color:red;">Oops! Algo salió mal.</h1>
+    <p style="font-size:20px;">Lamentamos el inconveniente. Intente más tarde.</p>
+    
 </div>
