the hig contrast

--- a/CancherksWebApp/Pages/Shared/_AdminLayout.cshtml
+++ b/CancherksWebApp/Pages/Shared/_AdminLayout.cshtml
@@ -73,6 +73,9 @@
                     </ul>
                 </div>
                 <div class="icon-HighContrast text-center align-middle text-black mx-1">
+                    <button type="button" onclick="applyHighContrast()">
+<i class="bi bi-brightness-high-fill" alt="Ícono alto contraste" style="font-size: 20px;"></i>
+                    </button>
                     <i class="bi bi-eye-fill" alt="Ícono alto contraste" style="font-size: 20px;"></i>
                     <i id="zoom-icon" class="bi bi-zoom-in" alt="Ícono acercar" style="font-size: 20px; cursor: pointer;"></i>
                     <i id="zoomOut-icon"class="bi bi-zoom-out" alt="Ícono alejar" style="font-size: 20px;"></i>
