Fix Login Session and some accesible bugs
-Las funciones de Aumentar y Disminuir Tamaño de letra (zoomIn zooOut), no funcionan como deberían, ya que hace que todo los texto tengan el mismo tamaño, osea

Ejemplo:		>>   		Resultado aumentar tamaño (ZoomIn)
h3  40px				h3: 45px
h5: 35px				h5: 45px

Los valores me los saqué del culo, pero la idea es esa, debería sumar respectivamente
ME VALE VERGA, solo lo noté y estoy apuntando cosas

-----------------------------------------------------------------------------------------------------------------
window.addEventListener('DOMContentLoaded', function () {
    guardarTamaniosOriginales();
    //aplicarZoomActual();
});

Comenté la línea aplicarZoomActual() (esa picha en español me da asco, pero bueno), porque la usé para hacer unos cambios del CSS y esa mierda se estaba ejecutando acada rato, (lo cual también es raro, porque no debería aplicar los cambios siempre, bueno sí porque si soy un señor que perezar estar haciendo zoomIn, para aumentar el tamaño, bueno me vale verga solo la comenté para hacer cambios en el CSS
-----------------------------------------------------------------------------------------------------------------

Para la vara del el contraste hice lo que me dio la gana, como puede ver funciona como una Fila Circular, cuando llega al final se devuelve al Inicio
-Si le le parece una mierda está en toda la libertad de quitarlo, yo no lo quité porque primero me costó un pichazo, no aplicar los colores, eso lo hizo chat GPT, si no el organizar esa mierda para que funcione así como Fila Circular, tampoco mucho la verdad, pero digamos que no está mal que sea así (digamos, también me vale verga si lo quiere cambiar y dejar solo el amarillo, o el gris o el invertido me vale verga), pero de una vez le digo que si lo cambia me voy con Valentina
-----------------------------------------------------------------------------------------------------------------

Mi grid de instalaciones es el complemento al cuadrado de

--- a/CancherksWebApp/Pages/Admin/Reportes.cshtml
+++ b/CancherksWebApp/Pages/Admin/Reportes.cshtml
@@ -91,7 +91,14 @@
                 <tr data-installation-id="@request.IdInstallation">
                     <td>@request.Person.PersonName</td>
                     <td>@request.Person.FirstLastName</td>
-                    <td>@request.Person.Student.Id</td>
+                    @if (request.Person.Student == null)
+                    {
+                        <td>@request.Person.Id</td>
+                    }
+                    else
+                    {
+                        <td>@request.Person.Student.Id</td>
+                    }
                     <td>@request.EmailRequester</td>
                     <td>@Model.Installations.FirstOrDefault(i => i.Id == request.IdInstallation)?.Name</td>
                     <td>@request.DateRequest.ToShortDateString()</td>
