--- a/CancherksWebApp/Pages/Admin/GestionSolicitudes.cshtml
+++ b/CancherksWebApp/Pages/Admin/GestionSolicitudes.cshtml
@@ -48,13 +48,27 @@
                 <tr data-installation-id="@request.IdInstallation">
                     <td>@request.Person.PersonName</td>
                     <td>@request.Person.FirstLastName</td>
-                    <td>@request.Person.Student.Id</td>
+                    @if (request.Person.Student == null)
+                    {
+                        <td>@request.Person.Id</td>
+                    }
+                    else
+                    {
+                        <td>@request.Person.Student.Id</td>
+                    }
+                    
                     <td>@request.EmailRequester</td>
                     <td>@Model.Installations.FirstOrDefault(i => i.Id == request.IdInstallation)?.Name</td>
                     <td>@request.DateRequest.ToShortDateString()</td>
                     <td>@request.StartTime.ToString()</td>
                     <td>@request.EndTime.ToString()</td>
                     <td>
+                        <!-- Interactive icons represented as buttons -->
+                        <button id="highContras" class="icon-button bi bi-check-circle-fill custom-success" aria-label="Aceptar Solicitud" data-id="@request.Id" style="cursor: pointer;" onclick="applyHighContrast()">
+                        </button>
+                        <button id="zoom-icon" class="icon-button bi bi-trash-fill custom-danger" aria-label="Rechar Solicitud" data-id="@request.Id" style="cursor: pointer;" onclick="zoomIn()">
+                        </button>
+
                         <i class="bi bi-check-circle-fill custom-success" data-id="@request.Id" style="cursor:pointer;"></i>
                         <i class="bi bi-trash-fill custom-danger" data-id="@request.Id" style="cursor:pointer;"></i>
                     </td>
