--- a/CancherksWebApp/Pages/Solicitante/Publicas.cshtml
+++ b/CancherksWebApp/Pages/Solicitante/Publicas.cshtml
@@ -15,10 +15,10 @@
 }
 <section class="container-fluid px-5 py-3">
 
-    <h3 style="margin-bottom: 2rem;">Instalaciones </h3>
+    <h3 style="margin-bottom: 2rem;">Instalaciones Públicas </h3>
     <dropdown class="dropdown">
         <button class="btn btn-secondary dropdown-toggle custom-dropdown-button" type="button" id="dropdownInstallations" data-bs-toggle="dropdown" aria-expanded="false">
-            Selecione un Deporte
+            Deporte
         </button>
         <ul class="dropdown-menu custom-dropdown-options" aria-labelledby="dropdownInstallations">
 
