--- a/CancherksWebApp/Pages/Admin/GestionSolicitudes.cshtml
+++ b/CancherksWebApp/Pages/Admin/GestionSolicitudes.cshtml
@@ -16,7 +16,7 @@
     <h3 style="margin-bottom: 2rem;">Solicitudes</h3>
 
     <div class="dropdown">
-        <button class="btn btn-secondary dropdown-toggle custom-dropdown-button" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
+        <button class="btn btn-secondary dropdown-toggle custom-dropdown-button" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false" aria-haspopup="true" aria-label="Filtrar solcitudes por nombre de instalación">
             Instalaciones
         </button>
 
