fixed filters report
fixed filters report

--- a/CancherksWebApp/Pages/Admin/GestionSolicitudes.cshtml
+++ b/CancherksWebApp/Pages/Admin/GestionSolicitudes.cshtml
@@ -30,7 +30,7 @@
         </ul>
     </div>
 
-    <table class="table" style="margin-top: 1rem;" aria-label="Tabla de solicitudes de los usuarios">
+    <table class="table" style="margin-top: 1rem;" aria-label="Tabla de solicitudes de los solicitantes">
         <thead>
             <tr>
                 <th scope="col">Nombre</th>
