--- a/CancherksWebApp/Pages/Admin/Reportes.cshtml
+++ b/CancherksWebApp/Pages/Admin/Reportes.cshtml
@@ -16,7 +16,7 @@
     <form method="post" class="d-flex align-items-center py-3">
        
         <dropdown class="dropdown">
-            <button class="btn btn-secondary dropdown-toggle custom-dropdown-button" type="button" id="dropdownInstallations" data-bs-toggle="dropdown" aria-expanded="false">
+            <button class="btn btn-secondary dropdown-toggle custom-dropdown-button" type="button" id="dropdownInstallations" data-bs-toggle="dropdown" aria-expanded="false" aria-haspopup="true" aria-label="Filtrar reporte por nombre de instalación">
                 Instalaciones
             </button>
             <ul class="dropdown-menu custom-dropdown-options" aria-labelledby="dropdownInstallations">
@@ -33,7 +33,7 @@
                 <div class="col-12">
                     <div class="input-group date datepicker-container" id="datepickerInicio-container">
 
-                        <input type="text" class="form-control datepickerInput" name="startDate" id="datepickerInicio-input" placeholder="Fecha Inicio" />
+                        <input type="text" class="form-control datepickerInput" name="startDate" id="datepickerInicio-input" placeholder="Fecha Inicio" aria-label="Seleccionar Fecha de Inicio" />
                         <span class="input-group-append datepickerIcon" id="datepickerInicio-icon">
                             <span class="input-group-text bg-light d-block">
                                 <i class="bi bi-calendar-check"></i>
@@ -46,7 +46,7 @@
             <div class="row">
                 <div class="col-12">
                     <div class="input-group date" id="datepickerFinal-container">
-                        <input type="text" class="form-control datepickerInput" name="endDate" id="datepickerFinal-input" placeholder="Fecha Final" />
+                        <input type="text" class="form-control datepickerInput" name="endDate" id="datepickerFinal-input" placeholder="Fecha Final" aria-label="Seleccionar Fecha de Final" />
                         <span class="input-group-append datepickerIcon" id="datepickerFinal-icon">
                             <span class="input-group-text bg-light d-block">
                                 <i class="bi bi-calendar-check"></i>
@@ -55,7 +55,7 @@
                     </div>
                 </div>
             </div>
-               
+
         </div>
 
             <button type="submit" asp-page-handler="DownloadReport" class="btn btn-primary button-gradient" data-bs-toggle="modal" data-bs-target="#report">Generar</button>
@@ -63,7 +63,7 @@
     </form>
 
 
-    <table class="table" style="margin-top: 1rem;">
+    <table class="table" style="margin-top: 1rem;" aria-label="Tabla de solicitudes de los usuarios">
         <thead>
             <tr>
                 <th scope="col">Nombre</th>
@@ -127,7 +127,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title">ATENCIÓN!</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar"></button>
             </div>
             <div class="modal-body">
                 <p>El reporte se generó exitosamente.</p>
